--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+
 .App {
   text-align: center;
 }
@@ -35,4 +36,72 @@
   to {
     transform: rotate(360deg);
   }
+}
+.product{
+  cursor: pointer;
+  border-radius: 5px;
+}
+.product:hover{
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  border: green 2px solid;
+}
+.text-main{
+  color: rgb(7, 177, 7);
+}
+.rating{
+  color: rgb(236, 236, 1);
+}
+.bg-main{
+  background-color: green;
+}
+.product .btn{
+  transition: transform 1s, opacity 1s;
+  transform: translateY(100%);
+  opacity: 0;
+}
+.product:hover .btn{
+  transform: translateY(0%);
+  opacity: 1;
+}
+.product .btn:hover{
+  background-color: rgb(15, 187, 15);
+}
+.productDetailsButton:hover,
+.btn-cart:hover{
+  background-color: rgb(15, 187, 15);
+}
+.productDetailsButton:active,
+.btn-cart:active{
+  background-color: rgb(15, 187, 15) !important;
+}
+.slick-prev:hover:before, .slick-prev:focus:before, .slick-next:hover:before, .slick-next:focus:before,
+.slick-next:before,.slick-next{
+  /* very important information !important */
+  display: none !important;
+}
+.nav-image{
+  width: 55px;
+}
+.productsLink{
+  text-decoration: none;
+  color: black;
+}
+.btn-cart{
+  font-size: medium;
+  padding: 6px 12px;
+}
+.btn-cart2{
+  font-size: medium;
+  padding: 6px 14px;
+}
+.btn-cart2:hover{
+  background-color: rgb(255 19 19) !important;
+}
+.network-status{
+  position: fixed;
+  bottom: 40px;
+  right: 40px;
+  background-color: wheat;
+  padding: 2rem;
+  color: rgb(15, 187, 15);
 }
