--- a/src/App.css
+++ b/src/App.css
@@ -63,7 +63,8 @@
   transform: translateY(0%);
   opacity: 1;
 }
-.product .btn:hover{
+.product .btn:hover,
+.btn-cart3:hover{
   background-color: rgb(15, 187, 15);
 }
 .productDetailsButton:hover,
@@ -71,7 +72,8 @@
   background-color: rgb(15, 187, 15);
 }
 .productDetailsButton:active,
-.btn-cart:active{
+.btn-cart:active,
+.btn-cart3:active{
   background-color: rgb(15, 187, 15) !important;
 }
 .slick-prev:hover:before, .slick-prev:focus:before, .slick-next:hover:before, .slick-next:focus:before,
@@ -104,4 +106,10 @@
   background-color: wheat;
   padding: 2rem;
   color: rgb(15, 187, 15);
+}
+.fixedFooter{
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  left: 0;
 }
